# keiba-scraper

./: .envrc  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  update_gitignore.sh
netkeiba/: errors.py  middlewares.py  settings.py  utils.py
netkeiba/spiders/: netkeibaracespider.py
