[tool.poetry]
name = "keiba-scraper"
version = "0.1.0"
description = ""
authors = ["porkbeans <mizuo.taka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.4"
scrapy = "~2.6.1"
selenium = "^4.1"
botocore = "^1.26"
google-cloud-storage = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
